# Homework_oop

./: README.md  main.py  pyproject.toml
src/: 14.1_main.py  category.py  classed.py  product.py  utils.py
tests/: conftest.py  test_category.py  test_class.py  test_product.py  test_utils.py
