[tool.poetry]
name = "homework-oop"
version = "0.1.0"
description = ""
authors = ["Denis Guryanov <guryanov19962010@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.4"
mypy = "^1.14.1"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"


[tool.poetry.group.test.dependencies]
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
